force-app/main/default/objects/Log__c/Log__c.object-meta.xml
<CustomObject>
    <pluralLabel>Logs</pluralLabel>
    <fullName>Log__c</fullName>
    <description>Object for historical tracking of successes and failures.</description>
    <nameField>
        <label>Log Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <label>Log</label>
</CustomObject>