force-app/main/default/objects/Log__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <type>Picklist</type>
    <inlineHelpText/>
    <description>Describes the bucket this related process should fall into.</description>
    <label>Category</label>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
              <fullName>Event Publish Failure</fullName>
              <default>true</default>
            </value>
            <value>
              <fullName>Deserilizatoin Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>