force-app/main/default/objects/Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <type>LongTextArea</type>
    <length>131072</length>
    <inlineHelpText/>
    <description>Captures the returned value based of success/failure.</description>
    <label>Message</label>
</CustomField>