force-app/main/default/objects/Log__c/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <type>LongTextArea</type>
    <length>131072</length>
    <inlineHelpText/>
    <description>The raw JSON payload input data, if applicable.</description>
    <label>Payload</label>
</CustomField>