force-app/main/default/objects/Log__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <type>Text</type>
    <length>255</length>
    <inlineHelpText/>
    <description>Describes the Source of related process.</description>
    <label>Source</label>
</CustomField>